k8s/keycloak/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: imageprocessing
  labels:
    app: keycloak
    layer: backend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
        layer: backend
    spec:
      containers:
        - name: keycloak
          image: gitlab-edu.supsi.ch:5050/dti-isin/roberto.guidi/didattica/progetti-semestre-diploma/cloud-native-image-processing/keycloak:dev
          imagePullPolicy: Always
          args: ["start", "--import-realm"]
          ports:
            - name: http
              containerPort: 8080
            - name: management
              containerPort: 9000
          volumeMounts:
            - name: realm-config
              mountPath: /opt/keycloak/data/import
              readOnly: true
          readinessProbe:
            httpGet:
              path: /health/ready
              port: management
            initialDelaySeconds: 20
            periodSeconds: 5
          livenessProbe:
            httpGet:
              path: /health/live
              port: management
            initialDelaySeconds: 40
            periodSeconds: 10
      volumes:
        - name: realm-config
          configMap:
            name: keycloak-realm-config
